css/styles.css
/* ... */
.card a {
  text-decoration: none;
  color: black;
}

.card h3,
.card p {
  margin: 1rem 0 0 1rem;
}

.card-small {
  display: flex;
  height: 80px;
  padding-bottom: 0;
}

.card-small img {
  width: 50%;
  height: 100%;
  border-radius: 5px 0 0 5px;
}

.card-small-text {
  display: flex;
  flex-direction: column;
  margin: 0.5rem 0 0 1rem;
  width: 50%;
}

.card-small-text h3,
.card-small-text p {
  font-size: 90%;
}

.blog-card {
  width: auto;
  min-width: 200px;
}

.carousel-container {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
}

.blog-page-content {
  display: grid;
  margin: 1rem 0;
  width: 90%;
  grid-gap: 3rem;
  grid-template-areas:
    "blog-grid1"
    "blog-grid2"
    "blog-grid3"
    "blog-grid4";
}

.blog-grid1 {
  grid-area: blog-grid1;
}

.blog-grid2 {
  grid-area: blog-grid2;
}

.blog-grid3 {
  grid-area: blog-grid3;
}

.blog-grid4 {
  grid-area: blog-grid4;
}

.blog-page-card {
  display: flex;
  flex-direction: column;
  background-color: var(--orange-background);
  box-shadow: 0 0 1em rgb(0 0 0 / 0.3);
  border-radius: 10px;
  padding: 1rem;
}

.blog-page-content h3 {
  margin: 1rem 0;
}

.blog-author-info {
  display: flex;
  gap: 1rem;
}

.blog-author-info p {
  font-size: 0.8rem;
}

.author-name-title {
  margin-top: 0;
  margin-bottom: 1rem;
}

.blog-post-info {
  margin-top: 2rem;
  font-size: 0.9rem;
  align-self: center;
}

.index-list-container {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.previous-articles-list {
  width: 80%;
}

.previous-articles-link {
  text-decoration: none;
  color: black;
}

.previous-articles-link:hover {
  text-decoration: underline;
}

.blog-list-container,
.search-content {
  display: grid;
  margin-bottom: 2rem;
  gap: 1rem;
  grid-template-columns: 1fr;
  width: 90%;
  min-height: 40vh;
}

/* NAVIGATION */

.navbar,
.navbar ul,
.nav-item {
  padding: 0;
  margin: 0;
  text-decoration: none;
  list-style-type: none;
}

.navbar,
.category-dropdown {
  background-color: var(--orange-background);
  position: absolute;
  display: none;
  top: 100px;
  padding: 1rem 0;
  width: 100%;
  left: 0;
}

.nav-menu {
  display: grid;
  grid-template-columns: 1fr;
  gap: 1rem;
  width: 100%;
  justify-items: center;
  align-items: center;
}

.nav-link {
  display: flex;
  justify-content: center;
  align-items: center;
  color: black;
  text-decoration: none;
  width: 100%;
  height: 100%;
  padding: 1rem;
}

.nav-item,
.category-dropdown a {
  width: 80%;
  height: 80%;
  display: flex;
  justify-content: center;
  align-items: center;
  border: var(--border) black;
}

.nav-link:hover,
.category-dropdown a:hover {
  background-color: white;
  color: var(--orange-background);
  text-decoration: none;
  cursor: pointer;
}

.hamburger-active {
  display: flex;
  z-index: 999;
}

.page-active {
  background-color: white;
  color: var(--orange-background);
  text-decoration: none;
}

.category-label {
  display: flex;
  flex-direction: column;
  height: auto;
}

.category-dropdown {
  position: static;
}

/* FORMS */

.validator-container {
  display: none;
  border: var(--border) green;
  color: green;
  width: 300px;
  margin: 1rem auto;
  padding: 0.3rem 0.5rem;
  text-align: center;
}

.form-error {
  display: none;
  color: red;
  font-size: 0.8rem;
  margin-bottom: 1rem;
}

.contact-form {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-decoration: none;
  color: black;
  border: 1px solid black;
  padding: 1rem;
  border-radius: 10px;
  background-color: var(--orange-background);
  width: 90%;
  margin-bottom: 1rem;
}

.contact-form input,
.message-input {
  width: 100%;
  margin: 0.5rem 0;
  padding: 0.5rem;
  font-size: 1rem;
}

.form-btn {
  color: black;
  margin: 1rem 0;
}

.search-dropdown {
  background-color: white;
  position: absolute;
  display: none;
  top: 100px;
  padding: 1rem 0;
  width: 100%;
  left: 0;
}

.searchbar-pos {
  display: flex;
}

.searchbar-pos > input {
  width: 60vw;
  height: 50px;
  padding: 1rem;
  border: var(--border) var(--orange-background);
}

.searchbar-pos > button {
  text-decoration: none;
  color: white;
  background-color: var(--orange-background);
  padding: 0.7rem 1rem;
  border: var(--border) var(--orange-background);
  height: 50px;
}

.search-active,
.category-active {
  display: flex;
  justify-content: center;
  z-index: 999;
}

.category-active {
  flex-direction: column;
  align-items: center;
  gap: 1rem;
}

/* IMAGES */

.header-image {
  width: 100%;
  height: 200px;
}

.about-image {
  width: 100%;
}

.user-profile-image {
  width: 100px;
  height: 100px;
  border-radius: 50%;
}

.card-image {
  width: 100%;
  height: 200px;
  border-radius: 5px 5px 0 0;
}

.blog-page-banner {
  width: 100%;
}

.blog-page-banner-image {
  width: 100%;
  height: 250px;
}

/* ICONS */

.material-icons {
  position: relative;
  color: black;
}

.material-icons:hover {
  cursor: pointer;
}

.material-icons.md-48 {
  font-size: 3rem;
}

.material-icons.md-36 {
  font-size: 2.25rem;
}

.material-icons.md-24 {
  font-size: 1.5rem;
}

.material-icons.md-18 {
  font-size: 1.12rem;
}

.page-logo {
  color: var(--green);
  text-align: center;
  font-size: 36px;
}

.header-right-icons {
  display: flex;
  gap: 0.5rem;
}

.footer-icons {
  display: flex;
  justify-content: center;
  gap: 1rem;
  margin: 1rem 0;
}

.footer-icons i {
  font-size: 2rem;
}

/* LOADER */

.loader {
  border: 15px solid #f3f3f3;
  border-top: 15px solid purple;
  border-radius: 100%;
  width: 100px;
  height: 100px;
  animation: spin 2s linear infinite;
  margin: auto;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

/* HIDDEN TEXT FOR ACCESSIBILITY */

.visually-hidden:not(:focus):not(:active) {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

/* MEDIA QUERIES */

/* TABLET */

@media only screen and (min-width: 767px) {
}
/* ... */

